# OpenWeather-App

./: buildozer.spec  main.py  pyproject.toml  test-secret-scaning.txt
.github/workflows/: dependencies.yml  main.yml
src/: main.py
